# ai-dev-tools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile.metrics  PROJECT_GOALS.md  README.md  README_BENCHMARK_ENHANCED.md  README_BENCHMARK_REWRITE.md  benchmark_light_20250716_215018.json  benchmark_results_20250716_214732.json  critical_file.nix  docker-compose.yml  medium_file.nix  pyproject.toml  safe_file.py  standalone_safety_check.py  test_direct_cli.py  test_patterns.py  test_patterns2.py  test_safety.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: prometheus.yml
docker/: Dockerfile.ollama-code  Dockerfile.ollama-large  Dockerfile.ollama-medium  Dockerfile.ollama-small
examples/: agent_example.py  benchmark_example.py
scripts/: analyze_batch_results.py  async_benchmark.py  batch_benchmark.py  benchmark_new.py  benchmark_setup.sh  comprehensive_benchmark.py  flake.nix  run_batch.sh  run_benchmark.sh  standalone_pattern_scanner.py  standalone_safety_check.py  test_benchmark_simple.py  test_real_ollama.py
src/ai_dev_tools/: __init__.py
src/ai_dev_tools/agents/: __init__.py  ai_agent.py
src/ai_dev_tools/benchmark/: __init__.py  config.py  core.py  execution.py  metrics.py  reporting.py  runner.py  tasks.py
src/ai_dev_tools/cli/: __init__.py  ai_benchmark.py  ai_helper.py  ai_ollama.py  ai_validate.py  ai_workflow.py  benchmark_cli.py  context_analyze.py  difference_analyze.py  impact_analyze.py  pattern_scan.py  repo_status.py  safety_check.py  simple_safety_check.py
src/ai_dev_tools/core/: __init__.py  ai_helper.py  baseline_simulator.py  benchmark_suite.py  container_orchestrator.py  context_analyzer.py  difference_analyzer.py  exit_codes.py  impact_analyzer.py  metrics_collector.py  ollama_client.py  output_strategy.py  pattern_scanner.py  repo_analyzer.py  safety_checker.py  validator.py
test_codebase/: README.md  safe_file.py
test_codebase/medium/: data_processor.py
test_codebase/problematic/: unsafe_code.py
test_codebase/simple/: basic_functions.py
tests/: conftest.py  test_ai_agent_basic.py  test_ai_helper_basic.py  test_ai_workflows.py  test_benchmark_config.py  test_benchmark_config_enhanced.py  test_benchmark_core.py  test_benchmark_metrics.py  test_benchmark_reporting.py  test_benchmark_tasks.py  test_context_analyzer_basic.py  test_difference_analyzer_basic.py  test_exit_code_validation.py  test_exit_codes.py  test_impact_analyzer_basic.py  test_integration.py  test_metrics_system.py  test_pattern_scanner_basic.py  test_performance.py  test_safety_checker_basic.py  test_strategy.md  test_token_efficiency.py  test_validator_basic.py
tests/features/: ai_agent.feature  ai_helper.feature  context_analysis.feature  difference_analysis.feature  impact_analysis.feature  output_strategy.feature  pattern_scanner.feature  repo_analyzer.feature  safety_checker.feature  validator.feature
tests/integration/: test_cli.py  test_direct_cli.py  test_ollama_comprehensive.py  test_ollama_integration.py  test_pattern_ollama.py  test_simple_cli.py
tests/step_definitions/: test_context_analysis_steps.py  test_difference_analysis_steps.py  test_impact_analysis_steps.py  test_output_strategy_steps.py  test_pattern_scanner_steps.py
tests/unit/: test_patterns.py  test_patterns2.py  test_safety.py
