[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-tools"
version = "0.9.0"
description = "AI-optimized development tools for efficient code analysis and pattern detection"
authors = [
    {name = "AI Development Tools", email = "dev@ai-tools.local"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-nix>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pathlib",
    "typing-extensions",
    "requests>=2.32.4",
    "aiohttp>=3.12.14",
    "pandas>=2.3.1",
    "matplotlib>=3.10.3",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-bdd>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
ai-pattern-scan = "ai_dev_tools.cli.pattern_scan:main"
ai-safety-check = "ai_dev_tools.cli.safety_check:main"
ai-repo-status = "ai_dev_tools.cli.repo_status:main"
ai-context = "ai_dev_tools.cli.context_analyze:main"
ai-diff = "ai_dev_tools.cli.difference_analyze:main"
ai-impact = "ai_dev_tools.cli.impact_analyze:main"
ai-workflow = "ai_dev_tools.cli.ai_workflow:cli"
ai-validate = "ai_dev_tools.cli.ai_validate:validate"
ai-helper = "ai_dev_tools.cli.ai_helper:ai_helper"
ai-benchmark = "ai_dev_tools.cli.ai_benchmark:ai_benchmark"
ai-ollama = "ai_dev_tools.cli.ai_ollama:cli"

[project.urls]
Homepage = "https://github.com/ai-dev-tools/ai-dev-tools"
Repository = "https://github.com/ai-dev-tools/ai-dev-tools"
Issues = "https://github.com/ai-dev-tools/ai-dev-tools/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ai-dev-tools.benchmark]

[tool.ai-dev-tools.benchmark.ollama_profiles]
light = [
    { name = "small", model = "llama3.2:1b", host = "localhost", port = 11434 }
]
medium = [
    { name = "small", model = "llama3.2:1b", host = "localhost", port = 11434 },
    { name = "medium", model = "llama3.2:3b", host = "localhost", port = 11435 }
]
heavy = [
    { name = "small", model = "llama3.2:1b", host = "localhost", port = 11434 },
    { name = "medium", model = "llama3.2:3b", host = "localhost", port = 11435 },
    { name = "large", model = "llama3.1:8b", host = "localhost", port = 11436 },
    { name = "code", model = "codellama:7b", host = "localhost", port = 11437 }
]

[tool.ai-dev-tools.benchmark.sample_sizes]
light = 3
medium = 6
heavy = 12
